<resources>
    <string name="app_name">Service Novigrad Project</string>
    <string name="Label_Password">Password</string>
    <string name="BtnText_SignIn">Sign In</string>
    <string name="BtnText_No_Account_Register">Don\'t have an account? Register here!</string>
    <string name="Login">Login</string>
    <string name="Main_Title">Service Novigrad</string>
    <string name="Label_First_Name">First Name</string>
    <string name="Register">Register</string>
    <string name="Label_Last_Name">Last Name</string>
    <string name="Label_Role">Role</string>
    <string name="Label_Password_Confirm">Confirm Password</string>
    <string name="Label_Email">Email</string>
    <string name="Label_Email_Confirm">Confirm Email</string>
    <string name="To_Login">Already a member? Click here to login!</string>
    <string name="Welcome_Title">Welcome to Service Novigrad</string>
    <string name="logoutButton">Logout</string>
    <string name="adminWelcome">Welcome Admin</string>
    <string name="BtnText_CreateService">Create Service</string>
    <string name="BtnText_EditService">Edit Service</string>
    <string name="BtnText_EditUser">Edit User</string>
    <string name="BtnText_Back">Back</string>
    <string name="title_activity_create_service">CreateService</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="adminWelcomeMessage">What would you like to do today?</string>
    <string name="BtnText_Delete">Delete</string>
    <string name="btnText_Continue">Continue</string>
    <string name="CreateService_Title">Create New Service</string>
    <string name="CreateService_LabelName">Name of Service</string>
    <string name="CreateService_LabelRate">Rate ($)</string>
    <string name="CreateService_LabelDocument">Required Documents (Click all that apply)</string>
    <string name="CreateService_CB_DriverLicense">Driver\'s License</string>
    <string name="CreateService_CB_HealthCard">Health Card</string>
    <string name="CreateService_CB_PhotoID">Photo ID</string>
    <string name="CreateService_Btn_Create">Create</string>
    <string name="CreateService_Btn_Back">Back</string>
    <string name="EditAService">Edit a Service</string>
    <string name="SelectService">Select a Service</string>
    <string name="Confirm">Confirm</string>
    <string name="title_activity_employee_home">EmployeeHome</string>
    <string name="BtnText_SetupBranch">Setup Branch Info</string>
    <string name="BtnText_BranchInfo">Edit Branch Info</string>
    <string name="BtnText_OfferedServices">Offered Services</string>
    <string name="BtnText_ServiceRequests">Service Requests</string>
    <string name="BtnText_Cancel">Cancel</string>
    <string name="BtnText_Create">Create</string>
    <string name="Title_SetupBranch">Enter Branch Info</string>
    <string name="Label_PhoneNumber">Phone Number</string>
    <string name="Label_Address">Branch Address</string>
    <string name="Label_WorkingHours">Working Hours (24 hour format)</string>
    <string name="Label_Sunday">Sunday</string>
    <string name="Label_Monday">Monday</string>
    <string name="Label_Tuesday">Tuesday</string>
    <string name="Label_Wednesday">Wednesday</string>
    <string name="Label_Thursday">Thursday</string>
    <string name="Label_Friday">Friday</string>
    <string name="Label_Saturday">Saturday</string>
    <string name="Label_Close">Close</string>
    <string name="Label_Open">Open</string>
    <string name="Label_InputMessage">To specify closed, enter CLOSED for both Open and Close</string>
    <string name="Title_EditBranch">Edit Branch Info</string>
    <string name="btn_Update">Update</string>
    <string name="btnAddRemoveServices">Add/Remove Services</string>
    <string name="approveRequests_Title">Pending Requests</string>
    <string name="ServiceRequestApprovalTitle">Approval?</string>
    <string name="LabelDocuments">Documents:</string>
    <string name="BtnText_Approve">Approve</string>
    <string name="BtnText_Reject">Reject</string>
    <string name="BtnText_FileRequest">File a request</string>
    <string name="BtnText_RateBranch">Rate a branch</string>
    <string name="BtnText_PendingRequests">Check Pending Requests</string>
    <string name="comment">Comment</string>
    <string name="rating">Leave a Rating</string>
    <string name="oneStarRating" />
    <string name="OneStarRating">1</string>
    <string name="TwoStarRating">2</string>
    <string name="ThreeStarRating">3</string>
    <string name="FourStarRating">4</string>
    <string name="FiveStarRating">5</string>
<<<<<<< HEAD
    <string name="submit">Submit Rating</string>
=======
    <string name="BtnText_Request">Make Request</string>
    <string name="btnAddDrivers">Add Drivers License</string>
    <string name="btnAddHealth">Add Health Card</string>
    <string name="btnAddPhotoId">Add Photo ID</string>
>>>>>>> 277627422ff29eff145f0885783b8132b7d41c34
</resources>