<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditService">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textEditAService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EditAService"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textSelectAService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SelectService" />

        <Spinner
            android:id="@+id/spinnerSelectService"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateService_LabelName" />

        <EditText
            android:id="@+id/textboxName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateService_LabelRate" />

        <EditText
            android:id="@+id/textboxRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/checkBoxDriversLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateService_CB_DriverLicense" />

        <CheckBox
            android:id="@+id/checkBoxHealthCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateService_CB_HealthCard" />

        <CheckBox
            android:id="@+id/checkBoxPhotoID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateService_CB_PhotoID" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickConfirm"
                    android:text="@string/Confirm" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickDelete"
                    android:text="Delete" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnReturn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClickReturn"
                    android:text="@string/BtnText_Back" />

            </LinearLayout>
        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>